# superjob_parser

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt  sonar-project.properties
server_result/: urls_vacancy.csv  vacancy.csv
src/: config.py  proxylist.csv  server.py
src/scripts/: clean_data.py
src/superjob/: check_res.py  learn_model.py  max_page.py  parser_content.py  resume_links_parser.py  resume_page_parser.py  test_parse.py  vacancy.py  vacancy_content_parser.py  vacancy_links.py  vacancy_links_parse.py
src/superjob/content/: data_1.csv  progress_links.csv  to_parse.csv
src/superjob/results/: level_0_links.csv  progress.csv  progress_links.csv  resume_links.csv  superjob_vacancies.csv  vacancy.csv  vacancy_links.csv  Разметка вакансий Superjob - level_0_links.csv
